<resources>
    <string name="app_name">todolist</string>
    <string name="Delete">Delete</string>
    <string name="Add_New_Task">Add New Task</string>
    <string name="Example">Example</string>
    <string name="AlreadyExist">This task already exist</string>
    <string name="TaskDone">Done</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="SelectTime">Select time</string>
    <string name="SelectDate">Select date</string>
    <string name="FieldEmpty">Please complete all field</string>
    <string name="Edit">Edit</string>
    <string name="EndDate">End Date</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="EditTask">Edit task</string>
    <string name="ErrorAddNotification">Error when trying to add notification</string>
    <string name="EndDueDateTask">Your task has arrived at its due date</string>
</resources>
